framec_tests/language_specific/cpp/v3_mir/positive/forward_inline_line_comment.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                => $^ // inline ok
            }
        }
}

