framec_tests/language_specific/cpp/v3_mir/negative/unbalanced_parens.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                -> $B(1, (2, 3)
            }
        }
}

